<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.badfic</groupId>
	<artifactId>power-hour</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>power-hour</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>21</java.version>
		<jda.version>5.3.0</jda.version>
		<lavaplayer.version>2.2.3</lavaplayer.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>${jda.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.arbjerg</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>${lavaplayer.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>build-image-no-fork</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<docker>
						<publishRegistry>
							<username>${env.DOCKER_USERNAME}</username>
							<password>${env.DOCKER_PASSWORD}</password>
							<url>${env.REGISTRY}</url>
						</publishRegistry>
					</docker>
					<image>
						<name>ghcr.io/badfic/power-hour</name>
						<tags>${env.DOCKER_TAGS}</tags>
						<publish>true</publish>
						<imagePlatform>linux/amd64</imagePlatform>
					</image>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<parameters>true</parameters>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
